--- a/live-commerce-front/package.json
+++ b/live-commerce-front/package.json
@@ -11,9 +11,11 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/stompjs": "^2.3.5",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
@@ -21,9 +23,11 @@
     "react-dom": "18.2.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
+    "sockjs-client": "^1.6.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
